# agent-framework-task-budget

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: specification.md
examples/: foundry_hosted_agent.py
scratch/: verify_remote_patterns.py  verify_remote_streaming.py
src/agent_framework_task_budget/: __init__.py  core.py  integration.py  maf_adapter.py
tests/: test_adapter.py  test_core.py  test_integration.py
